--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -898,7 +898,9 @@ input, select, textarea {
 	ul.icons {
 		cursor: default;
 		list-style: none;
-		padding-left: 0;
+		/* padding-left: 0; */
+		display: flex;
+    	justify-content: center;
 	}
 
 		ul.icons li {
