--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,7 +8,7 @@
     padding: 1em;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
+    transition: max-height 1.5s ease-in-out;
     /* background-color: #f1f1f1; */
 }
 
